# entity-resolved-kg-senzing-kuzu

./: .gitignore  AML.md  Dockerfile  Makefile  README.md  aml.py  aml_transact.ipynb  create_graph.ipynb  create_graph.py  docker-compose.yml  open_ownership.py  open_sanctions.py  process_senzing.py  pyproject.toml  requirements.txt
data/: README.md
notes/: docker.md  er_concepts.md  starter_kit.md
rootfs/var/opt/senzing/sqlite/: G2C.db
