[project]
name = "kgc-2025-workshop"
version = "0.1.0"
description = "Code for Kuzu-Senzing workshop at KGC 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2,<4.0.0",
    "icecream>=2.1.4,<3.0.0",
    "dotenv>=0.9.9,<0.10.0",
    "kuzu>=0.9.0",
    "watermark>=2.5.0",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "yfiles-jupyter-graphs-for-kuzu>=0.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
