[project]
name = "entity-resolved-kg-senzing-kuzu"
version = "0.2.0"
description = "Example code to create high-quality knowledge graphs using entity resolution with Kuzu and Senzing"

readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Prashanth Rao", email = "prashanth@kuzudb.com" },
    { name = "Paco Nathan", email = "paco@derwen.ai" },
]

requires-python = ">=3.13"
dependencies = [
    "icecream==2.1.4",
    "jupyterlab==4.4.1",
    "kuzu==0.9.0",
    "networkx>=3.4.2",
    "polars==1.29.0",
    "pyarrow==20.0.0",
    "python-dotenv==1.1.0",
    "watermark>=2.5.0",
    "yfiles-jupyter-graphs==1.10.5",
    "yfiles-jupyter-graphs-for-kuzu==0.0.4",
    "networkx==3.4.2",
    "pydantic>=2.11.7",
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

